@@ -2,62 +2,75 @@ package hu.sed.evaluator.task.evaluator.semantic;
 
 import com.google.inject.Inject;
 import com.google.inject.Singleton;
+import hu.sed.evaluator.item.element.TypeDefinition;
 import hu.sed.evaluator.item.syntax.TypeItem;
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
-import lombok.SneakyThrows;
 import lombok.experimental.FieldDefaults;
 import lombok.extern.slf4j.Slf4j;
-import org.objectweb.asm.ClassWriter;
-import org.objectweb.asm.Opcodes;
+import net.bytebuddy.ByteBuddy;
+import net.bytebuddy.dynamic.loading.ClassLoadingStrategy;
 
 import java.util.List;
+import java.util.Map;
+import java.util.Optional;
+import java.util.Set;
+import java.util.stream.Collectors;
 
 @Singleton
 @Slf4j
 @FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
 @RequiredArgsConstructor(onConstructor = @__(@Inject))
-public class JavaCodeService implements Opcodes {
+public class JavaCodeService {
 
-    @SneakyThrows
     public void addClass(TypeItem typeItem) {
-        ClassWriter classWriter = new ClassWriter(0);
-        String[] parts = typeItem.getName().split("\\.");
-        String className = parts[parts.length - 1];
-        String packageName = typeItem.getName().replace("." + className, "")
-                .replace(".", "/");
-        String parentClassName = typeItem.getParentClazz().getType().replace(".", "/");
-
-        classWriter.visit(V1_1, ACC_PUBLIC, packageName + "/" + className, null,
-                parentClassName, null);
-
-        byte[] code = classWriter.toByteArray();
-        this.defineClass(typeItem.getName(), code);
+        try {
+            new ByteBuddy()
+                    .subclass(Class.forName(typeItem.getParentClazz().getType()))
+                    .name(typeItem.getName())
+                    .make()
+                    .load(getClass().getClassLoader(), ClassLoadingStrategy.Default.INJECTION)
+                    .getLoaded();
+        } catch (Exception e) {
+            log.warn("Failed to inject class to classLoader: {}", typeItem.getName());
+        }
     }
 
     public void addClasses(List<TypeItem> typeItems) {
-        // TODO must be ordered by it's dependencies
-        typeItems.forEach(this::addClass);
+        Map<TypeDefinition, List<TypeItem>> classesByParentClass
+                = typeItems.stream().collect(Collectors.groupingBy(TypeItem::getParentClazz));
+
+        do {
+            Optional<TypeDefinition> availableClass = getAvailableClass(classesByParentClass.keySet());
+            if (availableClass.isPresent()) {
+                List<TypeItem> subTypes = classesByParentClass.get(availableClass.get());
+                subTypes.forEach(this::addClass);
+                classesByParentClass.remove(availableClass.get());
+            } else {
+                break;
+            }
+        }
+        while (!classesByParentClass.isEmpty());
+
+        if (!classesByParentClass.isEmpty()) {
+            log.warn("Following types could not be injected: ");
+            for (TypeDefinition typeDefinition : classesByParentClass.keySet()) {
+                for (TypeItem typeItem : classesByParentClass.get(typeDefinition)) {
+                    log.warn("Missing - {}, parentClass: {}", typeItem.getName(), typeItem.getParentClazz().getType());
+                }
+            }
+        }
     }
 
-    private void defineClass(String className, byte[] code) {
-        try {
-            ClassLoader loader = ClassLoader.getSystemClassLoader();
-            Class<?> cls = Class.forName("java.lang.ClassLoader");
-            java.lang.reflect.Method method = cls.getDeclaredMethod("defineClass",
-                    String.class, byte[].class, int.class, int.class);
-
-            // requires: --add-opens java.base/java.lang=ALL-UNNAMED
-            method.setAccessible(true);
-            try {
-                Object[] args =
-                        new Object[]{className, code, 0, code.length};
-                method.invoke(loader, args);
-            } finally {
-                method.setAccessible(false);
-            }
-        } catch (Exception e) {
-            log.error("Could not register class.. {}", className);
-        }
+    private Optional<TypeDefinition> getAvailableClass(Set<TypeDefinition> typeDefinitions) {
+        return typeDefinitions.stream()
+                .filter(typeDef -> {
+                    try {
+                        Class.forName(typeDef.getType());
+                        return true;
+                    } catch (ClassNotFoundException e) {
+                        return false;
+                    }
+                }).findFirst();
     }
 }
